[gd_scene load_steps=18 format=2]

[ext_resource path="res://shared_ressource/footstep_mouse.wav" type="AudioStream" id=1]
[ext_resource path="res://ennemie/Monster.gd" type="Script" id=2]
[ext_resource path="res://shared_ressource/radial.png" type="Texture" id=3]
[ext_resource path="res://shared_ressource/sprites/monster.png" type="Texture" id=4]
[ext_resource path="res://shared_ressource/squeak.wav" type="AudioStream" id=5]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -0.261459, -17.0715, -8.75633, 0.154198, 0.446442, 18.0878, 10.3571, 0.390167 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 23.3438

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 28.0548, 25.5664 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 33.2423, 33.5101 )

[sub_resource type="CircleShape2D" id=12]
radius = 350.0

[node name="Monster" type="KinematicBody2D"]
z_index = 3
collision_layer = 41
collision_mask = 33
script = ExtResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 4
occluder = SubResource( 1 )
light_mask = 4

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -3.14159
frames = SubResource( 8 )
animation = "New Anim"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 9 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 10 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 11 )

[node name="State" type="Node" parent="."]

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DetectionZone" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 12 )

[node name="End_of_chase" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 3 )
texture_scale = 0.7
color = Color( 0.988235, 0.0196078, 0.0196078, 1 )
energy = 0.5
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -10.511
pitch_scale = 0.69

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -12.723
pitch_scale = 0.95
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_DetectionZone_body_exited"]
[connection signal="timeout" from="End_of_chase" to="." method="_on_End_of_chase_timeout"]
